--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4i
------------
* Fixed a bunch of bugs and typos.
* Added new effects to a bunch of TF items. Among other things:
 - Adjusting femininity
 - Adjusting muscle tone (not widely used atm)
 - Adjusting hip size
 - More stat adjustments
* Added some minor scenes for picking up ingredients.
* Most TF items and ingredients now have more than one source; several mobs has had new items added to their drop tables (low odds).

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4h
------------
* Bashed a whole lot of bugs and typos.
* Tweaked some stuff in Maria dead drops regarding party.
* Cveta has some additional content. Requires you to have finished Bull Tower.
 - Intimate
 - Dates
* Expanded on the time that Cveta will allow you to talk to her
* Changed the names of some items.
* Nagazm updated with new effects. Among other things, it can now make you a herm. Thanks KeratinStench on Github for your contribution!

Version 0.4g
------------
* Fixed a mass of typos
* Fixed a bug in Momo that would show up if you talk to her about cooking a few times, choosing "only child"
* Possible fix for the Bulltower party wipe bug. Get back to me if people still have problems.
* Layla can no longer be a courtesan until you have taught her they ways of sex.
* Added a series of exploration events to the outlaws. Some of them can increase outlaw rep. Written by The Observer.
* Added a series of events to the outlaws. They have rather specific entry requirements, and allow you a new way to get a visa into Rigard. Written by The Observer.
 - Get positive rel with the outlaws (help out Aquilius if you pissed people off)
 - Talk to Maria, wait for a day, then return to the camp
 - You should be approached to take on a more important mission...